@@ -1,3 +1,6 @@
+2005-01-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/cursor.h:
+  - Fixed typo in Sun compiler workaround, thanks mark@markround.com
 2004-12-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/util.hxx:
   - Apply PQXX_LIBEXPORT to sleep_seconds(), thanks Chris Pike
